add production stage to the dockerfile